--- a/url_analyzer_ml.ipynb
+++ b/url_analyzer_ml.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyN9aDo/XW7PyNSQ2Tu1XhTp"
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
